--- a/views/stories/new.ejs
+++ b/views/stories/new.ejs
@@ -10,7 +10,7 @@
 
               <a href="/stories"> חזרה למלים לזכרו</a>
                </div>
-    <h1>ספרו לנו משהו על חיים</h1>
+    <h1>ספרו לנו על חיים</h1>
      
             <form action="/stories" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
@@ -18,13 +18,7 @@
                     <input class="form-control w-100" type="text" name="author" required>
                 </div>
                   
-                <%/*
-              <div class="custom-file">
-                  <input type="file" class="custom-file-input" id="image" name="image" accept="image/*">
-                  <label class="custom-file-label" for="image">בחירת תמונה (לא חובה)</label>
-                </div>
-                </div>
-                 */ %>
+              
             <div class="form-group">
                 <label for="image"> לבחירת תמונה (לא חובה)</label>
                <input class="form-control" type='file' name='image' accept="image/*"/>
