sanitize user input, sounds section error handling and display author in card header in sounds index page

--- a/views/events.ejs
+++ b/views/events.ejs
@@ -16,7 +16,7 @@
     <p>
 הנהלת האתר אינה אחראית לתוכן המוזכר בתיאור האירועים. יש לוודא עם מארגני האירוע כי הוא אכן מתקיים.
 </p>
-<p class="mb-4"> שמעתם על אירוע שלא מוזכר כאן או מארנים בעצמכם אירוע כזה? אנא צרו קשר איתנו בכתובת המייל<a href="mailto:inmemoryofhaim@gmail.com"> inmemoryofhaim@gmail.com </a>
+<p class="mb-4"> שמעתם על אירוע שלא מוזכר כאן או מארגנים בעצמכם אירוע כזה? אנא צרו קשר איתנו בכתובת המייל<a href="mailto:inmemoryofhaim@gmail.com"> inmemoryofhaim@gmail.com </a>
  עם שם ופרטי קשר של המארגנים, מיקום, תאריך, שעה ותיאור של האירוע ונעדכן אותו בלוח האירועים.
 </p>
 </div>
