--- a/views/sounds/index.ejs
+++ b/views/sounds/index.ejs
@@ -18,6 +18,7 @@
         <% sounds.forEach(function(sound){ %>
              <div class="col-auto mb-3">
                <div class="card">
+                 <small class="card-header">הועלה ע״י: <%= sound.author %></small>
               <div class="embed-responsive embed-responsive-1by1">
                  <iframe class="embed-responsive-item" height="100%" src= "<%= sound.youlink %>" allowfullscreen></iframe>
               </div>
