delete some unnecessary/ irrelevant code

--- a/views/sounds/new.ejs
+++ b/views/sounds/new.ejs
@@ -24,7 +24,7 @@
 
             <div class="form-group">
                     <label for="youlink">קישור לסרטון</label>
-                    <input class="form-control" type="text" name="youlink"  aria-describedby="linkHelpBlock" pattern="http://www\.youtube\.com\/(.+)|https://www\.youtube\.com\/(.+)" required>
+                    <input class="form-control" type="text" name="youlink"  aria-describedby="linkHelpBlock" ntpattern="http://www\.youtube\.com\/(.+)|https://www\.youtube\.com\/(.+)" required>
 
                     <small id="linkHelpBlock" class="form-text text-muted"> האתר תומך בסרטוני YouTube בלבד</small>
                 </div>
