--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -19,11 +19,14 @@
           </div>
           <div class="col-7"></div>
           <div class="col-3">
+          <a href="/sounds">
+          
           <span class="all-videos">
           לכל הסרטונים
+         
             <i class="fas fa-caret-left"></i>
           </span>
-      
+      </a>
         </div>
           <div class="container">
            <div class="row">
