--- a/views/about/about.ejs
+++ b/views/about/about.ejs
@@ -26,9 +26,13 @@
 חיים הלחין יצירות רבות לזמרים, לכלי נגינה שונים ולצוותים מוזיקליים שונים. חלק מיצירותיו בוצעו בידי אנסמבלים ישראלים מרכזיים כמו הסימפונייטה הישראלית באר שבע.
 </p>
 <p>
-<figure class="figure mt-4">
+<%/*<figure class="figure mt-4">
   <img src="https://res.cloudinary.com/drvycak8r/image/upload/v1547119009/storage/1.6533720.2531139392.jpg" class="figure-img img-fluid rounded" alt="צילום: אמיל סלמן">
   <figcaption class="figure-caption">חיים על יד הפסנתר</figcaption>
+</figure>*/%>
+<figure class="figure mt-4">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Haimt_in_London_2018.jpg/512px-Haimt_in_London_2018.jpg" class="figure-img img-fluid rounded" alt="Haimt in London">
+  <figcaption class="figure-caption">חיים בלונדון</figcaption>
 </figure>
 </p>
 בנוסף, הוא ליווה זמרים וחזנים, לימד נגינה בקונסרבטוריון, שימש כמנצח, ליווה כיתות אמן שונות והפיק וניהל מוסיקלית פרויקטים שונים, בעיקר מחזות זמר ל Association of Americans and Canadians in Israel (AACI) וארגון הלל באוניברסיטה העברית.
