--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -53,7 +53,7 @@
     <div class="container">
      <h2>זוכרים את חיים</h2>
       <p class="lead">
-      האתר הזה הוקם במטרה לאסוף כמה שיותר זכרונות מחיים <span class="res-text"> <br/> ולרכז אותם בצורה מסודרת באתר אחד.</span>
+      האתר הוקם במטרה לאסוף כמה שיותר זכרונות מחיים <span class="res-text"> <br/> ולרכז אותם בצורה מסודרת באתר אחד.</span>
     
  <br />
       מוזמנים להעלות זכרונות מחיים- תמונות או ציורים, סרטונים, קטעי מוסיקה וסיפורים.
