--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,9 +2,18 @@
 </div>
 <!-- Footer -->
 <footer>
-  <div class="container">© 2018 <span> פיתוח: </span>
-    <a href="#">יעל לוריא</a>
+  <div class="container">
+  <div class="row">
+  <div class="col-sm">
+  © 2018 <span> פיתוח: </span>
 
+    <a href="#">יעל לוריא</a>
+    </div>
+  <div class="col-sm">
+    ליצירת קשר: <a href="mailto:inmemoryofhaim@gmail.com">inmemoryofhaim@gmail.com</a>
+    </div>
+    </div>
+    </div>
   </div>
 </footer>
 
