new email address for contact on footer and as sender in gmail-send, new calendar from haimmemory@gmail.com, new alert on header, changes in text in about section

--- a/views/about/about.ejs
+++ b/views/about/about.ejs
@@ -13,7 +13,7 @@
 חיים נולד בחיפה ואת ילדותו העביר בקרית מוצקין. הוא למד במוסדות של חב"ד בתלמוד תורה, ולאחר מכן בישיבה קטנה בקריות. במקביל, למד בקונסרבטוריון קריית מוצקין. <p>
 חיים החל לעבוד כנגן עצמאי מגיל 16. לאחר לימודים בישיבה קטנה עשה בחינות בגרות (אקסטרנית) והתקבל לאקדמיה למוזיקה ולמחול בירושלים.
  </p>
- <p>הוא בוגר האקדמיה עם התמחות בפסנתר, הלחנה וניצוח. מוריו היו המלחין ד"ר מיכאל וולפה בקומפוזיציה ופרופ' יצחק כ"ץ ופרופ' ואדים מונוסטירסקי בפסנתר.
+ <p>הוא בוגר האקדמיה עם התמחות בפסנתר, הלחנה וניצוח. מוריו היו המלחין ד"ר מיכאל וולפה בקומפוזיציה ופרופ' יצחק כ"ץ, פרופ' ואדים מונוסטירסקי ופרופ׳ איתן גלוברזון בפסנתר. אצל פרופ׳ גלוברזון השלים גם תעודת הוראה בפסנתר.
 	</p>
 	<p>
 הוא זכה במלגת קרן התרבות אמריקה-ישראל (AICF) לשנים 2007–2009 ובמלגת קרן וולף.
@@ -59,6 +59,7 @@
  <p class="mb-4">
 חיים נהרג בתאונת פגע וברח שהתרחשה בערב חג הסוכות 2018. הוא הובא למנוחות בבית הקברות בהר הזיתים. הלווייתו בלטה באנשים הרבים מכלל הקבוצות בחברה הישראלית שבאו לנכוח ולחלוק לו כבוד אחרון כאדם וכמוסיקאי.
 </p>
+
 </div>
 <br>
 
