--- a/views/events.ejs
+++ b/views/events.ejs
@@ -16,13 +16,13 @@
     <p>
 הנהלת האתר אינה אחראית לתוכן המוזכר בתיאור האירועים. יש לוודא עם מארגני האירוע כי הוא אכן מתקיים.
 </p>
-<p class="mb-4"> שמעתם על אירוע שלא מוזכר כאן או מארגנים בעצמכם אירוע כזה? אנא צרו קשר איתנו בכתובת המייל<a href="mailto:inmemoryofhaim@gmail.com"> inmemoryofhaim@gmail.com </a>
+<p class="mb-4"> שמעתם על אירוע שלא מוזכר כאן או מארגנים בעצמכם אירוע כזה? אנא צרו קשר איתנו בכתובת המייל<a href="mailto:haimmemory@gmail.com"> haimmemory@gmail.com </a>
  עם שם ופרטי קשר של המארגנים, מיקום, תאריך, שעה ותיאור של האירוע ונעדכן אותו בלוח האירועים.
 </p>
 </div>
 
     <div class="embed-responsive embed-responsive-4by3 mb-3" >
-    <iframe src="https://calendar.google.com/calendar/b/1/embed?showTitle=0&amp;showPrint=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=inmemoryofhaim%40gmail.com&amp;color=%231B887A&amp;ctz=Asia%2FJerusalem" style="border-width:0" class="embed-responsive-item"  width="800" height="300" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://calendar.google.com/calendar/b/3/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Asia%2FJerusalem&amp;src=aGFpbW1lbW9yeUBnbWFpbC5jb20&amp;color=%23039BE5&amp;showTitle=0" style="border-width:0" class="embed-responsive-item" width="800" height="300" frameborder="0" scrolling="no"></iframe>
 
      
      </div>
