--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,7 +18,20 @@
 <%if(!locals.active){active = null;}%>
     </head>
     <body>
-   
+<div class="alert alert-warning alert-dismissible fade show text-center" role="alert">
+ .In order to honor Haim's memory please do not use this website on Shabbat and Jewish holidays
+ <br/>
+
+  על מנת לכבד את זכרו של חיים נא לא לגלוש באתר בשבת ומועדים.
+
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
+
+    
+
   <div id="content">   
 <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
