--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -62,12 +62,12 @@
        <li class="nav-item ml-2">
         <a class="nav-link <%if(active=="events"){%>active<%}%>" href="/events">אירועים</a>
       </li>   
-       <li class="nav-item ml-2">
+     <!--  <li class="nav-item ml-2">
         <a class="nav-link <%if(active =="works"){%>active<%}%>" href="/works">מעזבונותיו</a>
       </li>   
         <li class="nav-item ml-2">
         <a class="nav-link <%if(active=="press"){%>active<%}%>" href="/press">כתבות</a>
-      </li>
+      </li> -->
 
     </ul>
     </div>
