--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -11,14 +11,9 @@ body {
 min-height: calc(100vh - 95px); 
 }
 
-
-
-
 #delete-form {
   display: inline;
 }
-
-
 
 .back-caret{
   font-size: 100%;
@@ -97,16 +92,13 @@ min-height: calc(100vh - 95px);
    
   width: 100%;
   height: 715px;
-  background-image: url("https://cdn.isnet.co.il/dyncontent/2018/10/14/1b7bf985-e3b2-46d2-8cf9-1defbddd5369.png");
+  background-image: url("https://res.cloudinary.com/drvycak8r/image/upload/v1577817646/storage/haim-cover.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
   text-align: center; 
   padding: 70px 0;
-  /* padding-right: 800px; */
-  /* padding-top: 40px; */
-  
   
 }
 
@@ -150,23 +142,6 @@ min-height: calc(100vh - 95px);
   
 }
 
-/* .book{
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)), url("https://res.cloudinary.com/drvycak8r/image/upload/v1570910596/storage/0001.jpg") ;
-  height: 500px;
-  padding-top: 200px;
-}
-  @media screen and (min-width: 1000px){
-    .book{
-    height: 600px;
-  
-      padding-top: 100px;
-    }
-  } */
-
-
-
 .memory-share{
   background-repeat: no-repeat;
   background-size: cover;
@@ -188,17 +163,6 @@ min-height: calc(100vh - 95px);
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
 .construct{
   height: 100vh;
   padding-top: 20%;
@@ -208,7 +172,6 @@ min-height: calc(100vh - 95px);
   color: white;
 }
 footer{
-  /* padding: 20px 0px 20px 800px; */
   background-color: #f5f6f7;
   font-size: 15px;
   color:black;
